--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
 
 .main::before {
   content: "";
-  background-image: url("/img/main/bg-main-1.png");
+  background-image: url("../img/main/bg-main-1.png");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
@@ -441,7 +441,7 @@ body {
 }
 
 .about {
-  background: url("/img/about/bg-about-2.png") no-repeat bottom right/contain;
+  background: url("../img/about/bg-about-2.png") no-repeat bottom right/contain;
 }
 
 .about .about__body {
@@ -538,7 +538,7 @@ body {
 }
 
 .classes {
-  background: url("/img/classes/bg-classes-1.png") no-repeat center left/cover;
+  background: url("../img/classes/bg-classes-1.png") no-repeat center left/cover;
   position: relative;
   padding: 120px 0 100px;
 }
@@ -583,7 +583,7 @@ body {
   width: 100%;
   height: 100%;
   content: " ";
-  background: url("/img/classes/bg-classes-2.png") no-repeat center top;
+  background: url("../img/classes/bg-classes-2.png") no-repeat center top;
   position: absolute;
   top: 0;
 }
@@ -713,7 +713,7 @@ body {
 }
 
 .instructors__header {
-  background: url("/img/instructors/bg-instructors.png") no-repeat center right/cover;
+  background: url("../img/instructors/bg-instructors.png") no-repeat center right/cover;
 }
 
 .instructors__header .title-section {
@@ -1578,11 +1578,11 @@ body {
   }
 }
 @supports (-webkit-appearance:none){
-.main::before{background-image:url("/img/main/bg-main-1.webp")}
-.about{background:url("/img/about/bg-about-2.webp") no-repeat bottom right/contain}
-.classes{background:url("/img/classes/bg-classes-1.webp") no-repeat center left/cover}
-.classes:before{background:url("/img/classes/bg-classes-2.webp") no-repeat center top}
-.instructors__header{background:url("/img/instructors/bg-instructors.webp") no-repeat center right/cover}
+.main::before{background-image:url("../img/main/bg-main-1.webp")}
+.about{background:url("../img/about/bg-about-2.webp") no-repeat bottom right/contain}
+.classes{background:url("../img/classes/bg-classes-1.webp") no-repeat center left/cover}
+.classes:before{background:url("../img/classes/bg-classes-2.webp") no-repeat center top}
+.instructors__header{background:url("../img/instructors/bg-instructors.webp") no-repeat center right/cover}
 }
 
  @media (max-width: 1380px){
